Bug 252148 - Copied mails are marked as unread
Summary: Copied mails are marked as unread
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 242690 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-23 16:05 UTC by Bjoern Ricks
Modified: 2010-11-11 13:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2010-09-23 16:05:46 UTC
Steps to reproduce:

1) Create a new folder a
2) Copy mails form inbox to folder a
3) Sync folder a

All copied mails in folder are marked as unread now
Not sure if that is a feature but for me a copy of a read mail should be marked as read too.
Comment 1 Volker Krause 2010-10-05 17:03:34 UTC
SVN commit 1182763 by vkrause:

preserve existing flags when adding new mails to an IMAP folder

BUG: 252148


 M  +1 -0      additemtask.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1182763
Comment 2 Volker Krause 2010-10-14 10:09:01 UTC
*** Bug 242690 has been marked as a duplicate of this bug. ***
Comment 3 Ludwig Reiter 2010-11-11 13:36:23 UTC
tested with kdepim-mobile 20101111.1195418-1maemo1

Works for me now. Closed.