preserve existing flags when adding new mails to an IMAP folder

BUG: 252148

svn path=/trunk/KDE/kdepim/runtime/; revision=1182763